--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
         <div class="Longintro">
             <p class="myself">Myself Manish Balami from Hetauda, Nepal.</p>
-            <p class="whoami">I"m a student studying to be a great developer.</p>
+            <p class="whoami">I'm a student studying to be a great developer.</p>
             <p class="freetouch">Feel free to get in touch or take a look at my work below.</p>
         </div>
     </div>
