--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <div class="line">
             <div class="dot">
                 <div class="dots dot1">
-                    <div class="timeline-box timline-box-right">
+                    <div class="timeline-box timeline-box-right">
                         <div class="timeline-content">
                             <div class="timeline-head">borned</div>
                             <div class="timeline-body">don't remember what really happened but cried alot for sure.</div>
