--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <link  href="style.css" type="text/css" rel="stylesheet">
+    <meta name="google-site-verification" content="OmmKtbiJk-RSpC1yP_--VZOXEW0p9mwhsIEc_BZgZTA" />
 </head>
 <body>
     <div class="parallax" id="home">
