--- a/index.html
+++ b/index.html
@@ -251,8 +251,12 @@
     </div>
     <div class="projects-section">
         <div class="projects-box">
-            <div class="projects-head">Nothing</div>
-            <div class="projects-body">nothing to show yet.stay tuned for updates.</div>
+            <div class="projects-head">JS Projects</div>
+            <div class="projects-body">
+                <a target="_blank" href="https://manish021124.github.io/js-dom-projects/">
+                    <img src="js-projects.jpg" alt="JS DOM Projects">
+                </a>
+            </div>
         </div>
     </div>
     <div class="footer">
